--- a/HOME.html
+++ b/HOME.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <title>TFBOYS SHOP</title>
+    <meta charset="UTF-8">
     <script type="text/javascript" src="HOME.js"></script>
     <link href="HOME.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Prompt" rel="stylesheet">
   </head>
   <body class="body">
     <div class="card">
@@ -28,9 +30,9 @@
           <label for="r3"><span></span>Paypal</label>
         </p>
         <h4><b>Name on Card</b></h4>
-        <input class="textbox" type="text" name="namecard" id="namecard" style="background: transparent">
+        <input class="textbox" type="text" name="namecard" id="namecard">
         <h4><b>Credit Card number</b></h4>
-        <input class="textbox" type="text" name="numbercard" id="numbercard" style="background: transparent">
+        <input class="textbox" type="text" name="numbercard" id="numbercard">
         <button type="submit" class="button" onclick="Continue()">Continue</button>
         <strong><p id="c" style="font-size: 18"></p></strong>
       </div>
